--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.*
@@ -10,31 +8,55 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Testing
 /coverage
+.nyc_output/
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Production build
 /build
 
-# misc
-.DS_Store
-*.pem
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Miscellaneous
+.DS_Store               # macOS system files
+*.pem                   # Certificate files
+*.log                   # Log files
+*.swp                   # Swap files created by text editors
+*.swo
+*~
 
-# vercel
+# IDEs and editors
+.vscode/                # VS Code settings
+.idea/                  # JetBrains IDE settings
+*.sublime-project       # Sublime Text project files
+*.sublime-workspace     # Sublime Text workspace files
+
+# Vercel deployment settings
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Temporary files
+.tmp
+.cache/
+
+# Ignoring specific build artifacts (optional)
+*.bak
+*.backup
+*.temp
